# TOFAnalysis

./: .gitignore  CMakeLists.txt  README.md
analysis/: algorithms.py  analysis.h  analysis.hpp  analysis.py  calculate_method.py  check_fit.py  compare.py  compare_algorithms.py  dm_vs_dt.py  extract.hpp  extract.py  fit_thinking.txt  mass_pid.py  mass_spectum.py  photons_analysis.py  plot.hpp  plot.py  plot_fit.py  plot_something.py  shower_starter.py  smearing_study.py  tof_estimators.hpp  tof_pid.py
analysis/slow/: algorithms.py  analysis.py
doc/: Doxyfile
include/: ContLinkDef.h  ExtractCalorimeterHits.h  ExtractCalorimeterHits.hpp  ExtractCluster.h  ExtractCluster.hpp  ExtractPFO.h  ExtractPFO.hpp  ExtractTrack.h  ExtractTrack.hpp  ExtractTrackParams.h  ExtractTrackerHits.h  ExtractTrackerHits.hpp  SETAnalysis.hpp  TOFAnaUtils.hpp  TOFAnalysis.h  TOFAnalysis.hpp  TofAnaUtils.hpp  TofAnalysis.hpp
job/: 2f_Z_hadronic.sh  2f_Z_hadronic.sub  2f_Z_hadronic.txt  2f_Z_hadronic_250gev_part1.txt  2f_Z_hadronic_250gev_part2.txt  2f_Z_hadronic_500.txt  2f_Z_hadronic_small.txt  2f_Z_hadronic_test.txt  2f_hadronic_250gev.txt  calib_kaons.sh  calib_kaons.sub  calib_kaons.txt  job.sh  job.sub  merge_root.sh  send_jobs.sub  test_job.txt
src/: ContDict.cxx  ContDict_rdict.pcm  ExtractCalorimeterHits.cpp  ExtractCluster.cpp  ExtractPFO.cpp  ExtractTrack.cpp  ExtractTrackParams.cpp  ExtractTrackerHits.cpp  SETAnalysis.cpp  TOFAnaUtils.cpp  TOFAnalysis.cc  TOFAnalysis.cpp  TofAnaUtils.cpp  TofAnalysis.cpp
xml/: TOFAnalysis.xml  steer.xml
